radix-engine-tests/tests/dec_macros/src/dec_err_more_than_one_decimal_point.rs
use radix_engine_tests::prelude::*;

fn main() {
    const X: Decimal = dec!("1.000.0");
}
